[workspace]
members = [
    "crates/amdfan",
    "crates/amdfand",
    "crates/amdgpu",
    "crates/amdgpu-config",
    "crates/amdgui",
    "crates/amdgui-helper",
    "crates/amdguid-client",
    "crates/amdmond",
    "crates/amdmond-lib",
    "crates/amdportsd",
    "crates/amdvold",
]
resolver = "2"

[workspace.dependencies]
egui = { version = "0.31" }
egui_plot = { version = "0.31" }
emath = { version = "0.31" }
epaint = { version = "0.31" }
egui-winit = { version = "0.31" }
winit = { version = "0.30.9", features = ["x11", "wayland"] }
eframe = { version = "0.31" }
tracing = { version = "^0.1.37" }
bytemuck = "1"
chrono = "0.4.19"
crossbeam = "0.8.1"
crossterm = "0.23.2"
csv = "1.1.6"
futures = "0.3"
image = { version = "=0.24.0", default-features = false }
onlyerror = "0"
parking_lot = "=0.12.1"
pidlock = "0.1"
serde = "1.0.137"
sudo = "0.6"
tempdir = "0.3.7"
thiserror = "1.0.30"
tokio = "1.19.2"
tracing-subscriber = "0.3.17"
tui = "0.18.0"
toml = "0.5"
ron = "0.7"
nix = "0.24"
gumdrop = "0.8"
eyra = "0"
