[package]
name = "amdfan"
version = "0.1.0"
edition = "2021"

[dependencies]
amdgpu = { path = "../amdgpu", version = "1.0.11", features = ["gui-helper"] }
amdgpu-config = { path = "../amdgpu-config", version = "1.0.10", features = ["fan"] }

serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5" }
ron = { version = "0.1" }

thiserror = { version = "1.0" }
gumdrop = { version = "0.8" }

log = { version = "0.4" }
pretty_env_logger = { version = "0.4" }

tui = { version = "0.18.0", features = [] }
crossbeam = { version = "0.8.1" }
crossterm = { version = "0.23.2" }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0" }
amdgpu-config = { path = "../amdgpu-config", version = "1.0", features = ["fan"] }
