[package]
name = "amdgpu-config"
version = "1.0.10"
edition = "2021"
description = "Subcomponent of AMDGPU tools"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"

[lib]
name = "amdgpu_config"
path = "./src/lib.rs"

[features]
fan = []
voltage = []
monitor = []
gui = []

[dependencies]
amdgpu = { path = "../amdgpu", version = "1.0.9" }

serde = { version = "1.0.126", features = ["derive"] }
toml = { version = "0.5.8" }
csv = { version = "1.1.6" }

thiserror = "1.0.30"
gumdrop = { version = "0.8.0" }

log = { version = "0.4.14" }
pretty_env_logger = { version = "0.4.0" }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0" }
