[package]
name = "amdgpu"
version = "1.0.11"
edition = "2018"
description = "Subcomponent of AMDGPU fan control service"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"

[features]
gui-helper = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5" }
ron = { version = "0.7" }

thiserror = { version = "1.0" }
gumdrop = { version = "0.8" }

log = { version = "0.4" }
pretty_env_logger = { version = "0.4" }

nix = { version = "0.24" }

pidlock = { version = "0.1" }
