[package]
name = "amdgui-helper"
version = "1.0.10"
edition = "2018"
description = "AMDGPU fan control service"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"

[dependencies]
amdgpu = { path = "../amdgpu", version = "1.0.9", features = ["gui-helper"] }
amdgpu-config = { path = "../amdgpu-config", version = "1.0.9", features = ["fan", "gui"] }
amdmond-lib = { path = "../amdmond-lib", version = "1.0.9" }

serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5" }
ron = { version = "0.7" }

thiserror = { version = "1.0" }
gumdrop = { version = "0.8" }

log = { version = "0.4" }
pretty_env_logger = { version = "0.4" }

nix = { version = "0.23" }

sudo = { version = "0.6" }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0" }
amdgpu-config = { path = "../amdgpu-config", version = "1.0", features = ["fan", "gui"] }
amdmond-lib = { path = "../amdmond-lib", version = "1.0" }
