[package]
name = "amdguid"
version = "1.0.9"
edition = "2018"
description = "AMDGPU fan control service"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"

[features]
wayland = [
    "egui_vulkano",
    "vulkano-win",
    "vulkano",
    "vulkano-shaders",
    "_gui"
]
xorg = ["glium", "egui_glium", "_gui"]
default = ["wayland"]
_gui = [
    "egui",
    "epaint",
    "epi",
    "winit",
    "egui-winit",
]

[dependencies]
amdgpu = { path = "../amdgpu", version = "1.0.9", features = ["gui-helper"] }
amdgpu-config = { path = "../amdgpu-config", version = "1.0.9", features = ["fan", "gui"] }
amdmond-lib = { path = "../amdmond-lib", version = "1.0.9" }

serde = { version = "1.0.126", features = ["derive"] }
toml = { version = "0.5.8" }
thiserror = { version = "1.0.30" }
gumdrop = { version = "0.8.0" }

log = { version = "0.4.14" }
pretty_env_logger = { version = "0.4.0" }

egui = { version = "0.15.0", optional = true }
epaint = { version = "0.15.0", features = ["serialize"], optional = true }
epi = { version = "0.15.0", optional = true }
winit = { version = "0.25.0", optional = true }
egui-winit = { version = "0.15.0", optional = true }
# vulkan
egui_vulkano = { version = "0.4.0", optional = true }
vulkano-win = { version = "0.25.0", optional = true }
vulkano = { version = "0.25.0", optional = true }
vulkano-shaders = { version = "0.25.0", optional = true }
# xorg
glium = { version = "0.30", optional = true }
egui_glium = { version = "0.15.0", optional = true }

tokio = { version = "1.15.0", features = ["full"] }
parking_lot = { version = "0.11.2" }

nix = { version = "0.23.1" }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0", features = ["gui-helper"] }
amdgpu-config = { path = "../amdgpu-config", version = "1.0", features = ["fan", "gui"] }
amdmond-lib = { path = "../amdmond-lib", version = "1.0" }
