[package]
name = "amdguid"
version = "1.0.12"
edition = "2018"
description = "AMDGPU fan control service"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"

[features]
wayland = [
    "egui_vulkano",
    "vulkano-win",
    "vulkano",
    "vulkano-shaders",
    "_gui"
]
xorg-glium = ["glium", "egui_glium", "_gui"]
xorg-glow = ["glow", "egui_glow", "glutin", "_gui"]
default = ["wayland"]
_gui = [
    "egui",
    "epaint",
    "epi",
    "winit",
    "egui-winit",
]

[dependencies]
amdgpu = { path = "../amdgpu", version = "1.0.11", features = ["gui-helper"] }
amdgpu-config = { path = "../amdgpu-config", version = "1.0.10", features = ["fan", "gui"] }
amdmond-lib = { path = "../amdmond-lib", version = "1.0.10" }

serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5" }
thiserror = { version = "1.0" }
gumdrop = { version = "0.8" }

tracing = { version = "0.1.36" }
tracing-subscriber = { version = "0.3.15" }

egui = { version = "0.18", optional = true, features = [] }
epaint = { version = "0.18", features = [], optional = true }
epi = { version = "0.17.0", optional = true }
winit = { version = "0.26", optional = true }
egui-winit = { version = "0.18", optional = true }
# vulkan
egui_vulkano = { version = "0.8.0", optional = true }
vulkano-win = { version = "0.29.0", optional = true }
vulkano = { version = "0.29.0", optional = true }
vulkano-shaders = { version = "0.29.0", optional = true }
bytemuck = { version = "*" }
# xorg glium
glium = { version = "0.32.1", optional = true }
egui_glium = { version = "0.18.0", optional = true }
# xorg glow
glutin = { version = "0.29", optional = true }
glow = { version = "0.11", optional = true }
egui_glow = { version = "0.18", optional = true }

tokio = { version = "1.20", features = ["full"] }
parking_lot = { version = "0.12" }

nix = { version = "0.25" }

image = { version = "0.24.2" }
emath = { version = "0.18" }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0", features = ["gui-helper"] }
amdgpu-config = { path = "../amdgpu-config", version = "1.0", features = ["fan", "gui"] }
amdmond-lib = { path = "../amdmond-lib", version = "1.0" }
