[package]
name = "amdvold"
version = "1.0.10"
edition = "2018"
description = "AMDGPU fan control service"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"

[dependencies]
amdgpu = { path = "../amdgpu", version = "1.0.9" }
amdgpu-config = { path = "../amdgpu-config", version = "1.0.9", features = ["voltage"] }

serde = { version = "1.0.126", features = ["derive"] }
toml = { version = "0.5.8" }
thiserror = { version = "1.0.30" }
gumdrop = { version = "0.8.0" }

log = { version = "0.4.14" }
pretty_env_logger = { version = "0.4.0" }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0" }
amdgpu-config = { path = "../amdgpu-config", version = "1.0", features = ["voltage"] }
