[package]
name = "amdvold"
version = "1.0.10"
edition = "2018"
description = "AMDGPU fan control service"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"

[dependencies]
amdgpu = { path = "../amdgpu", version = "1.0.11" }
amdgpu-config = { path = "../amdgpu-config", version = "1.0.10", features = ["voltage"] }

serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5" }
thiserror = { version = "1.0" }
gumdrop = { version = "0.8" }

log = { version = "0.4" }
pretty_env_logger = { version = "0.4" }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0" }
amdgpu-config = { path = "../amdgpu-config", version = "1.0", features = ["voltage"] }
