[package]
name = "amdfan"
version = "0.1.0"
edition = "2021"
description = "AMDGPU library"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"
authors = ['Adrian Woźniak <adrian.wozniak@ita-prog.pl>']
homepage = 'https://github.com/Eraden/amdgpud'

[dependencies]
amdgpu = { path = "../amdgpu", version = "1.0.11", features = ["gui-helper"] }
amdgpu-config = { path = "../amdgpu-config", version = "1.0.10", features = ["fan"] }
crossbeam = { version = "0.8.1" }
crossterm = { version = "0.23.2" }
gumdrop = { version = "0.8" }
ron = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5" }
tracing = { version = "0.1.37" }
tui = { version = "0.18.0", features = [] }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0" }
amdgpu-config = { path = "../amdgpu-config", version = "1.0", features = ["fan"] }
