[package]
name = "amdfan"
version = "0.1.0"
edition = "2021"
description = "AMDGPU library"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"
authors = ['Adrian Woźniak <adrian.wozniak@ita-prog.pl>']
homepage = 'https://github.com/Eraden/amdgpud'

[dependencies]
amdgpu = { path = "../amdgpu", version = "1.0.11", features = ["gui-helper"] }
amdgpu-config = { path = "../amdgpu-config", version = "1.0.10", features = ["fan"] }
crossbeam = { workspace = true }
crossterm = { workspace = true }
gumdrop = { workspace = true }
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true }
tui = { workspace = true, features = [] }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0" }
amdgpu-config = { path = "../amdgpu-config", version = "1.0", features = ["fan"] }
