[package]
name = "amdfand"
version = "1.0.14"
edition = "2018"
description = "AMDGPU fan control service"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"
authors = ['Adrian Woźniak <adrian.wozniak@ita-prog.pl>']
homepage = 'https://github.com/Eraden/amdgpud'

[package.metadata]
target = "x86_64-unknown-linux-musl"

[features]
static = ["eyra"]

[[bin]]
name = "amdfand"
path = "./src/main.rs"

[dependencies]
amdgpu = { path = "../amdgpu", version = "1.0.11", features = ["gui-helper"] }
amdgpu-config = { path = "../amdgpu-config", version = "1.0.10", features = ["fan"] }
eyra = { workspace = true, optional = true }
gumdrop = { workspace = true }
onlyerror = { workspace = true }
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0" }
amdgpu-config = { path = "../amdgpu-config", version = "1.0", features = ["fan"] }
tempdir = { workspace = true }

[package.metadata.aur]
depends = []
optdepends = []
files = [[
    "../../services/amdfand"
]]
