[package]
name = "amdgpu"
version = "1.0.12"
edition = "2018"
description = "Subcomponent of AMDGPU fan control service"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"

[features]
gui-helper = []

[dependencies]
egui-winit = { version = "0.18", default-features = false }
gumdrop = { version = "0.8" }
nix = { version = "0.24" }
pidlock = { version = "0.1" }
ron = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0" }
toml = { version = "0.5" }
tracing = { version = "0.1.37" }
