[package]
name = "amdgpu"
version = "1.0.12"
edition = "2018"
description = "Subcomponent of AMDGPU fan control service"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"

[features]
gui-helper = []

[dependencies]
egui-winit = { workspace = true }
gumdrop = { workspace = true }
nix = { workspace = true }
pidlock = { workspace = true }
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
