[package]
name = "amdgui-helper"
version = "1.0.10"
edition = "2018"
description = "AMDGPU fan control service"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"
authors = ['Adrian Woźniak <adrian.wozniak@ita-prog.pl>']
homepage = 'https://github.com/Eraden/amdgpud'

[package.metadata]
target = "x86_64-unknown-linux-musl"

[[bin]]
name = "amdgui-helper"
path = "./src/main.rs"

[features]
static = ["eyra"]

[dependencies]
amdgpu = { path = "../amdgpu", version = "1.0.9", features = ["gui-helper"] }
amdgpu-config = { path = "../amdgpu-config", version = "1.0.9", features = ["fan", "gui"] }
amdmond-lib = { path = "../amdmond-lib", version = "1.0.9" }
gumdrop = { version = "0.8" }
nix = { version = "0.23" }
ron = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
eyra = { version = "0.16.3", optional = true }
sudo = { version = "0.6" }
thiserror = { version = "1.0" }
toml = { version = "0.5" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0" }
amdgpu-config = { path = "../amdgpu-config", version = "1.0", features = ["fan", "gui"] }
amdmond-lib = { path = "../amdmond-lib", version = "1.0" }
