[package]
name = "amdguid"
version = "1.0.14"
edition = "2018"
description = "AMDGPU fan control service"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"

[dependencies]
amdgpu = { path = "../amdgpu", version = "1", features = ["gui-helper"] }
amdgpu-config = { path = "../amdgpu-config", version = "1", features = ["fan", "gui"] }
amdmond-lib = { path = "../amdmond-lib", version = "1" }
bytemuck = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_plot = { workspace = true }
epaint = { workspace = true }
gumdrop = { workspace = true }
image = { workspace = true, features = ["png"] }
nix = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0", features = ["gui-helper"] }
amdgpu-config = { path = "../amdgpu-config", version = "1.0", features = ["fan", "gui"] }
amdmond-lib = { path = "../amdmond-lib", version = "1.0" }
