[package]
name = "amdguid-wayland"
version = "1.0.13"
edition = "2018"
description = "AMDGPU fan control service"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"
authors = ['Adrian Woźniak <adrian.wozniak@ita-prog.pl>']
homepage = 'https://github.com/Eraden/amdgpud'

[package.metadata]
depends = ["amdgui-helper-bin"]

[[bin]]
name = "amdguid-wayland"
path = "./src/main.rs"

[dependencies]
amdguid = { path = "../amdgui", version = "1" }
amdgpu = { path = "../amdgpu", version = "1", features = ["gui-helper"] }
amdgpu-config = { path = "../amdgpu-config", version = "1", features = ["fan", "gui"] }
amdmond-lib = { path = "../amdmond-lib", version = "1" }
bytemuck = { version = "1" }
egui-winit = { workspace = true }
# egui_vulkano = { version = "0.8" }
emath = { workspace = true }
epaint = { workspace = true }
eframe = { workspace = true }
glutin = { version = "0" }
gumdrop = { version = "0" }
nix = { version = "0" }
serde = { version = "1", features = ["derive"] }
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }
toml = { version = "0" }
tracing = { version = "0" }
vulkano = { version = "0" }
vulkano-shaders = { version = "0" }
vulkano-win = { version = "0" }
winit = { version = "0" }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0", features = ["gui-helper"] }
amdgpu-config = { path = "../amdgpu-config", version = "1.0", features = ["fan", "gui"] }
amdmond-lib = { path = "../amdmond-lib", version = "1.0" }
