[package]
name = "amdmond"
version = "1.0.14"
edition = "2021"
description = "AMD GPU monitoring tool for Linux"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"
authors = ['Adrian Woźniak <adrian.wozniak@ita-prog.pl>']
homepage = 'https://github.com/Eraden/amdgpud'

[package.metadata]
target = "x86_64-unknown-linux-musl"

[[bin]]
name = 'amdmond'
path = "./src/main.rs"

[features]
static = ["eyra"]

[dependencies]
amdgpu = { path = "../amdgpu", version = "1.0.11" }
amdgpu-config = { path = "../amdgpu-config", version = "1.0.10", features = ["monitor", "fan"] }
amdmond-lib = { path = "../amdmond-lib", version = "1.0.10" }
chrono = { version = "0.4.19", features = ["serde"] }
csv = { version = "1.1.6" }
gumdrop = { version = "0.8.0" }
serde = { version = "1.0.126", features = ["derive"] }
eyra = { version = "0.16.3", optional = true }
toml = { version = "0.5.8" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0" }
amdgpu-config = { path = "../amdgpu-config", version = "1.0", features = ["monitor", "fan"] }
amdmond-lib = { path = "../amdmond-lib", version = "1.0" }
