[package]
name = "amdmond"
version = "1.0.14"
edition = "2021"
description = "AMD GPU monitoring tool for Linux"
license = "MIT OR Apache-2.0"
keywords = ["hardware", "amdgpu"]
categories = ["hardware-support"]
repository = "https://github.com/Eraden/amdgpud"
authors = ['Adrian Woźniak <adrian.wozniak@ita-prog.pl>']
homepage = 'https://github.com/Eraden/amdgpud'

[package.metadata]
target = "x86_64-unknown-linux-musl"

[[bin]]
name = 'amdmond'
path = "./src/main.rs"

[features]
static = ["eyra"]

[dependencies]
amdgpu = { path = "../amdgpu", version = "1.0.11" }
amdgpu-config = { path = "../amdgpu-config", version = "1.0.10", features = ["monitor", "fan"] }
amdmond-lib = { path = "../amdmond-lib", version = "1.0.10" }
chrono = { workspace = true, features = ["serde"] }
csv = { workspace = true }
gumdrop = { workspace = true }
serde = { workspace = true, features = ["derive"] }
eyra = { workspace = true, optional = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
amdgpu = { path = "../amdgpu", version = "1.0" }
amdgpu-config = { path = "../amdgpu-config", version = "1.0", features = ["monitor", "fan"] }
amdmond-lib = { path = "../amdmond-lib", version = "1.0" }
